z-index 1 to all components for img background, avatar size improved, button now accepts avatar, image mask-lg, rating accepts label and avatars, card only overflow when panel, section overflow-hidden when panel, child spacing fixes

--- a/package/src/css/space.scss
+++ b/package/src/css/space.scss
@@ -32,12 +32,12 @@
     }
 
     .full + .label,
+    .icon + .icon,
     .label + .full {
       margin-left: var(--space-2);
     }
 
-    .image + .full,
-    .icon + .full {
+    .image + .full {
       margin-left: var(--space-6);
     }
   }
@@ -61,7 +61,6 @@
     }
 
     .full + .heading,
-    .full + .label,
     .full + .link,
     .full + .list,
     .full + .paragraph,
@@ -85,6 +84,7 @@
     .label + .input,
     .variant-link + .variant-link,
     .label + .textarea,
+    .full + .label,
     .label + .select {
       margin-top: var(--space-2);
     }
